Overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-.root{
+*{
     scroll-behavior: smooth !important;
+}
+body{
+    overflow-x: hidden !important;
 }
